# Nion-Agent

./: .gitignore  AGENTS.md  CLAUDE.md  CODEX_TASK.md  CONTRIBUTING.md  ELECTRON.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  README.md  SECURITY.md  config.example.yaml  extensions_config.example.json  nion.code-workspace
backend/: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  debug.py  langgraph.json  nion  pyproject.toml  ruff.toml  test_cli_integration.py
backend/app/: nion_cli.py
backend/app/channels/: bridge_service.py  connection_service.py  db.py  event_broker.py  incoming_service.py  repository.py  runtime_manager.py  webhook_service.py
backend/docs/: API.md  APPLE_CONTAINER.md  ARCHITECTURE.md  AUTO_TITLE_GENERATION.md  CONFIGURATION.md  EMBEDDING_MODELS_IMPLEMENTATION.md  FILE_UPLOAD.md  MCP_SERVER.md  MEMORY_IMPROVEMENTS_SUMMARY.md  MEMORY_V2_COMPLETION_PLAN.md  MEMORY_V2_补全方案_主文档.md  MEMORY_V2_补全方案_代码示例.md  PATH_EXAMPLES.md  README.md  SETUP.md  TITLE_GENERATION_IMPLEMENTATION.md  plan_mode_usage.md  summarization.md
backend/scripts/: create_reading_assistant.py
backend/src/: client.py  nion_cli.py
backend/tests/: conftest.py  test_a2ui_middleware_repair_loop.py  test_a2ui_toggle.py  test_artifact_groups_not_ready.py  test_artifact_groups_router.py  test_channels_media_delivery.py  test_channels_telegram.py  test_checkpointer.py  test_clarification_middleware_core_logic.py  test_cli_catalog_interactive_commands.py  test_cli_interactive_middleware_pty.py  test_cli_interactive_router_contract.py  test_cli_interactive_session_contract.py  test_client.py  test_client_live.py  test_config_management.py  test_config_repository_env_placeholders.py  test_custom_agent.py  test_default_agent_init.py  test_default_agent_memory_add_and_hit.py  test_default_agent_middlewares.py  test_docker_sandbox_mode_detection.py  test_evolution_auto_trigger.py  test_evolution_models.py  test_evolution_router.py  test_extensions_config_path_resolution.py  test_gateway_security_cleanup.py  test_harness_boundary.py  test_heartbeat_models.py  test_infoquest_client.py  test_internal_tool_recall.py  test_internal_tool_recall_middleware.py  test_langgraph_client.py  test_langgraph_proxy_router.py  test_lead_agent_delegation_contract.py  test_lead_agent_model_resolution.py  test_lead_agent_rss_context.py  test_local_sandbox.py  test_managed_cli_exec.py  test_mcp_client_config.py  (+71 more)
(+984 files in other folders)
