[project]
name = "nion"
version = "0.1.0"
description = "LangGraph-based AI agent system with sandbox execution capabilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "agent-sandbox>=0.0.19",
    "dingtalk-stream>=0.22.0",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "kubernetes>=30.0.0",
    "langchain>=1.2.10",
    "langchain-anthropic>=1.3.4",
    "langchain-deepseek>=1.0.1",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-openai>=1.1.7",
    "lark-oapi>=1.4.20",
    "langgraph==1.1.0",
    "langgraph-api>=0.7.0,<0.8.0",
    "langgraph-cli>=0.4.14",
    "langgraph-runtime-inmem>=0.22.1",
    "markdownify>=1.2.2",
    "markitdown[all,xlsx]>=0.0.1a2",
    "numpy>=1.26.0",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "readabilipy>=0.3.0",
    "sse-starlette>=2.1.0",
    "tavily-python>=0.7.17",
    "firecrawl-py>=1.15.0",
    "tiktoken>=0.8.0",
    "uvicorn[standard]>=0.34.0",
    "ddgs>=9.10.0",
    "duckdb>=1.4.4",
    "langchain-google-genai>=4.2.1",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "onnxruntime>=1.20.1",
    "openviking==0.2.1",
    "sentence-transformers>=5.3.0",
    # Harness layer is split into a workspace member (packages/harness) but must be importable as `nion.*`
    # for gateway/runtime/desktop executions that do not manually inject PYTHONPATH.
    "nion-harness",
]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-cov>=6.0.0", "ruff>=0.14.11", "vulture>=2.11"]

[tool.uv]
override-dependencies = ["langgraph==1.1.0"]

[tool.uv.workspace]
members = ["packages/harness"]

[tool.uv.sources]
nion-harness = { workspace = true }

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "unit: deterministic unit tests",
    "integration: module integration tests",
    "e2e: end-to-end flow tests",
    "nonfunc: non-functional tests (performance/resilience/security)",
    "real: tests that require real external dependencies/credentials",
    "runtime: tests that validate desktop/runtime behavior",
    "parity: tests that validate source/runtime parity",
]

[tool.coverage.run]
branch = true
source = ["nion", "app"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
